--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,4 @@
-streamlit
-pandas
-plotly
-yfinance
-matplotlib
-openai
-seaborn
-python-docx
-textblob
-google-api-python-client
-pytrends
-Pillow
-requests
-tweepy
-python-dotenv
-praw
-os
-altair
+streamlit==1.35.0
+openai==1.30.1
+pandas==2.2.2
+altair==5.3.0
